[webui] Fixes collapsed state, couldn't expand contentbox reliably

--- a/src/webui/src/sass/_boxes.scss
+++ b/src/webui/src/sass/_boxes.scss
@@ -32,7 +32,8 @@ $bar-colors: (
 }
 
 contentwrapper { display: flex; flex-direction: column; justify-content: center; height: 100%; }
-@keyframes flexy { from { flex-wrap: wrap; } to { flex-wrap: nowrap; } }
+@keyframes flexw { from { flex-wrap: wrap; } to { flex-wrap: nowrap; } }
+@keyframes flexg { from { flex-grow: 1; } to { flex-grow: 0; flex: 1; } }
 .sectionbox { margin-bottom: 1.3rem;
   .sb-container { flex: 1; display: flex; flex-wrap: wrap; }
   .sb-body { margin-left: 1.3rem; padding: 1.3rem; flex-grow: 1; }
@@ -49,7 +50,8 @@ contentwrapper { display: flex; flex-direction: column; justify-content: center;
     .icon.collapser { margin-top: auto; }
   }
   &.collapsed {
-    .sb-container { animation: flexy; animation-delay: 0.6s; animation-duration: 0s; animation-fill-mode: forwards; }
+    .sb-container { animation: 0s flexw 0.6s forwards; }
+    .sb-body { animation: 0s flexg 0.6s forwards; }
     .sb-controls { padding: 1.65rem; padding-top: 2.6rem; padding-left: 2.95rem; flex-basis: 75%; }
     .icon.collapser { transform: rotate(-90deg); }
   }
